# named-entity-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  archive.zip:Zone.Identifier  main.py  pyproject.toml
src/dataset/: __init__.py  dataset.py
src/settigns/: settings.py
src/settings/: __init__.py  settings.py
src/training/: __init__.py  metrics.py  model.py  tokenizer.py  trainer.py  training_args.py
src/utils/: __init__.py  utils.py
