[tool.poetry]
name = "named-entity-recognition"
version = "0.1.0"
description = ""
authors = ["kubano <jakubno3ak@gmail.com>"]
readme = "README.md"
packages = [{include = "named_entity_recognition"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
datasets = "^2.17.1"
transformers = "^4.38.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
