[tool.poetry]
name = "named-entity-recognition"
version = "0.1.0"
description = ""
authors = ["kubano <jakubno3ak@gmail.com>"]
readme = "README.md"
packages = [{include = "named_entity_recognition"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.2.0"
datasets = "^2.17.1"
isort = "^5.13.2"
pandas = "^2.2.1"
pre-commit = "^3.6.2"
pydantic-settings = "^2.2.1"
scikit-learn = "^1.4.1.post1"
seqeval = "^1.2.2"
transformers = {extras = ["torch"], version = "^4.38.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
